--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <scm>
+        <connection>scm:git:ssh://gitrepos@ifbma.org/~/LegacyDespot</connection>
+        <developerConnection>scm:git:ssh://gitrepos@ifbma.org/~/LegacyDespot</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
