Add Bundle properties for jsf labels new to the views.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -337,3 +337,243 @@ ListRechnungskundenTitle_bemerkung=Bemerkung
 ListRechnungskundenTitle_anrede=Anrede
 ListRechnungskundenTitle_skonto=Skonto
 ListRechnungskundenTitle_kundeKuerzel=KundeKuerzel
+
+CustomerCreated=Customer was successfully created.
+CustomerUpdated=Customer was successfully updated.
+CustomerDeleted=Customer was successfully deleted.
+CreateCustomerTitle=Create New Customer
+CreateCustomerSaveLink=Save
+CreateCustomerShowAllLink=Show All Customer Items
+CreateCustomerIndexLink=Index
+CreateCustomerLabel_id=Id:
+CreateCustomerTitle_id=Id
+CreateCustomerLabel_kuerzel=Kuerzel:
+CreateCustomerTitle_kuerzel=Kuerzel
+CreateCustomerLabel_firmierung1=Firmierung1:
+CreateCustomerTitle_firmierung1=Firmierung1
+CreateCustomerLabel_firmierung2=Firmierung2:
+CreateCustomerTitle_firmierung2=Firmierung2
+CreateCustomerLabel_strasse=Strasse:
+CreateCustomerTitle_strasse=Strasse
+CreateCustomerLabel_plz=Plz:
+CreateCustomerTitle_plz=Plz
+CreateCustomerLabel_ort=Ort:
+CreateCustomerTitle_ort=Ort
+CreateCustomerLabel_kundennummer=Kundennummer:
+CreateCustomerTitle_kundennummer=Kundennummer
+CreateCustomerLabel_telefon=Telefon:
+CreateCustomerTitle_telefon=Telefon
+CreateCustomerLabel_durchwahl=Durchwahl:
+CreateCustomerTitle_durchwahl=Durchwahl
+EditCustomerTitle=Edit Customer
+EditCustomerSaveLink=Save
+EditCustomerViewLink=View
+EditCustomerShowAllLink=Show All Customer Items
+EditCustomerIndexLink=Index
+EditCustomerLabel_id=Id:
+EditCustomerTitle_id=Id
+EditCustomerLabel_kuerzel=Kuerzel:
+EditCustomerTitle_kuerzel=Kuerzel
+EditCustomerLabel_firmierung1=Firmierung1:
+EditCustomerTitle_firmierung1=Firmierung1
+EditCustomerLabel_firmierung2=Firmierung2:
+EditCustomerTitle_firmierung2=Firmierung2
+EditCustomerLabel_strasse=Strasse:
+EditCustomerTitle_strasse=Strasse
+EditCustomerLabel_plz=Plz:
+EditCustomerTitle_plz=Plz
+EditCustomerLabel_ort=Ort:
+EditCustomerTitle_ort=Ort
+EditCustomerLabel_kundennummer=Kundennummer:
+EditCustomerTitle_kundennummer=Kundennummer
+EditCustomerLabel_telefon=Telefon:
+EditCustomerTitle_telefon=Telefon
+EditCustomerLabel_durchwahl=Durchwahl:
+EditCustomerTitle_durchwahl=Durchwahl
+ViewCustomerTitle=View
+ViewCustomerDestroyLink=Destroy
+ViewCustomerEditLink=Edit
+ViewCustomerCreateLink=Create New Customer
+ViewCustomerShowAllLink=Show All Customer Items
+ViewCustomerIndexLink=Index
+ViewCustomerLabel_id=Id:
+ViewCustomerTitle_id=Id
+ViewCustomerLabel_kuerzel=Kuerzel:
+ViewCustomerTitle_kuerzel=Kuerzel
+ViewCustomerLabel_firmierung1=Firmierung1:
+ViewCustomerTitle_firmierung1=Firmierung1
+ViewCustomerLabel_firmierung2=Firmierung2:
+ViewCustomerTitle_firmierung2=Firmierung2
+ViewCustomerLabel_strasse=Strasse:
+ViewCustomerTitle_strasse=Strasse
+ViewCustomerLabel_plz=Plz:
+ViewCustomerTitle_plz=Plz
+ViewCustomerLabel_ort=Ort:
+ViewCustomerTitle_ort=Ort
+ViewCustomerLabel_kundennummer=Kundennummer:
+ViewCustomerTitle_kundennummer=Kundennummer
+ViewCustomerLabel_telefon=Telefon:
+ViewCustomerTitle_telefon=Telefon
+ViewCustomerLabel_durchwahl=Durchwahl:
+ViewCustomerTitle_durchwahl=Durchwahl
+ListCustomerTitle=List
+ListCustomerEmpty=(No Customer Items Found)
+ListCustomerDestroyLink=Destroy
+ListCustomerEditLink=Edit
+ListCustomerViewLink=View
+ListCustomerCreateLink=Create New Customer
+ListCustomerIndexLink=Index
+ListCustomerTitle_id=Id
+ListCustomerTitle_kuerzel=Kuerzel
+ListCustomerTitle_firmierung1=Firmierung1
+ListCustomerTitle_firmierung2=Firmierung2
+ListCustomerTitle_strasse=Strasse
+ListCustomerTitle_plz=Plz
+ListCustomerTitle_ort=Ort
+ListCustomerTitle_kundennummer=Kundennummer
+ListCustomerTitle_telefon=Telefon
+ListCustomerTitle_durchwahl=Durchwahl
+WorkorderCreated=Workorder was successfully created.
+WorkorderUpdated=Workorder was successfully updated.
+WorkorderDeleted=Workorder was successfully deleted.
+CreateWorkorderTitle=Create New Workorder
+CreateWorkorderSaveLink=Save
+CreateWorkorderShowAllLink=Show All Workorder Items
+CreateWorkorderIndexLink=Index
+CreateWorkorderLabel_id=Id:
+CreateWorkorderTitle_id=Id
+CreateWorkorderLabel_dat=Dat:
+CreateWorkorderTitle_dat=Dat
+CreateWorkorderLabel_uhr=Uhr:
+CreateWorkorderTitle_uhr=Uhr
+CreateWorkorderLabel_von=Von:
+CreateWorkorderTitle_von=Von
+CreateWorkorderLabel_ueber=Ueber:
+CreateWorkorderTitle_ueber=Ueber
+CreateWorkorderLabel_nach=Nach:
+CreateWorkorderTitle_nach=Nach
+CreateWorkorderLabel_job=Job:
+CreateWorkorderTitle_job=Job
+CreateWorkorderLabel_fahrschecknr=Fahrschecknr:
+CreateWorkorderTitle_fahrschecknr=Fahrschecknr
+CreateWorkorderLabel_preis=Preis:
+CreateWorkorderTitle_preis=Preis
+CreateWorkorderLabel_fahrernr=Fahrernr:
+CreateWorkorderTitle_fahrernr=Fahrernr
+CreateWorkorderLabel_typ=Typ:
+CreateWorkorderTitle_typ=Typ
+CreateWorkorderLabel_preischeck=Preischeck:
+CreateWorkorderTitle_preischeck=Preischeck
+CreateWorkorderLabel_fahrscheckcheck=Fahrscheckcheck:
+CreateWorkorderTitle_fahrscheckcheck=Fahrscheckcheck
+CreateWorkorderLabel_sonderkonditionen=Sonderkonditionen:
+CreateWorkorderTitle_sonderkonditionen=Sonderkonditionen
+CreateWorkorderLabel_summe=Summe:
+CreateWorkorderTitle_summe=Summe
+CreateWorkorderLabel_kuerzel=Kuerzel:
+CreateWorkorderTitle_kuerzel=Kuerzel
+CreateWorkorderLabel_firmierung1=Firmierung1:
+CreateWorkorderTitle_firmierung1=Firmierung1
+EditWorkorderTitle=Edit Workorder
+EditWorkorderSaveLink=Save
+EditWorkorderViewLink=View
+EditWorkorderShowAllLink=Show All Workorder Items
+EditWorkorderIndexLink=Index
+EditWorkorderLabel_id=Id:
+EditWorkorderTitle_id=Id
+EditWorkorderLabel_dat=Dat:
+EditWorkorderTitle_dat=Dat
+EditWorkorderLabel_uhr=Uhr:
+EditWorkorderTitle_uhr=Uhr
+EditWorkorderLabel_von=Von:
+EditWorkorderTitle_von=Von
+EditWorkorderLabel_ueber=Ueber:
+EditWorkorderTitle_ueber=Ueber
+EditWorkorderLabel_nach=Nach:
+EditWorkorderTitle_nach=Nach
+EditWorkorderLabel_job=Job:
+EditWorkorderTitle_job=Job
+EditWorkorderLabel_fahrschecknr=Fahrschecknr:
+EditWorkorderTitle_fahrschecknr=Fahrschecknr
+EditWorkorderLabel_preis=Preis:
+EditWorkorderTitle_preis=Preis
+EditWorkorderLabel_fahrernr=Fahrernr:
+EditWorkorderTitle_fahrernr=Fahrernr
+EditWorkorderLabel_typ=Typ:
+EditWorkorderTitle_typ=Typ
+EditWorkorderLabel_preischeck=Preischeck:
+EditWorkorderTitle_preischeck=Preischeck
+EditWorkorderLabel_fahrscheckcheck=Fahrscheckcheck:
+EditWorkorderTitle_fahrscheckcheck=Fahrscheckcheck
+EditWorkorderLabel_sonderkonditionen=Sonderkonditionen:
+EditWorkorderTitle_sonderkonditionen=Sonderkonditionen
+EditWorkorderLabel_summe=Summe:
+EditWorkorderTitle_summe=Summe
+EditWorkorderLabel_kuerzel=Kuerzel:
+EditWorkorderTitle_kuerzel=Kuerzel
+EditWorkorderLabel_firmierung1=Firmierung1:
+EditWorkorderTitle_firmierung1=Firmierung1
+ViewWorkorderTitle=View
+ViewWorkorderDestroyLink=Destroy
+ViewWorkorderEditLink=Edit
+ViewWorkorderCreateLink=Create New Workorder
+ViewWorkorderShowAllLink=Show All Workorder Items
+ViewWorkorderIndexLink=Index
+ViewWorkorderLabel_id=Id:
+ViewWorkorderTitle_id=Id
+ViewWorkorderLabel_dat=Dat:
+ViewWorkorderTitle_dat=Dat
+ViewWorkorderLabel_uhr=Uhr:
+ViewWorkorderTitle_uhr=Uhr
+ViewWorkorderLabel_von=Von:
+ViewWorkorderTitle_von=Von
+ViewWorkorderLabel_ueber=Ueber:
+ViewWorkorderTitle_ueber=Ueber
+ViewWorkorderLabel_nach=Nach:
+ViewWorkorderTitle_nach=Nach
+ViewWorkorderLabel_job=Job:
+ViewWorkorderTitle_job=Job
+ViewWorkorderLabel_fahrschecknr=Fahrschecknr:
+ViewWorkorderTitle_fahrschecknr=Fahrschecknr
+ViewWorkorderLabel_preis=Preis:
+ViewWorkorderTitle_preis=Preis
+ViewWorkorderLabel_fahrernr=Fahrernr:
+ViewWorkorderTitle_fahrernr=Fahrernr
+ViewWorkorderLabel_typ=Typ:
+ViewWorkorderTitle_typ=Typ
+ViewWorkorderLabel_preischeck=Preischeck:
+ViewWorkorderTitle_preischeck=Preischeck
+ViewWorkorderLabel_fahrscheckcheck=Fahrscheckcheck:
+ViewWorkorderTitle_fahrscheckcheck=Fahrscheckcheck
+ViewWorkorderLabel_sonderkonditionen=Sonderkonditionen:
+ViewWorkorderTitle_sonderkonditionen=Sonderkonditionen
+ViewWorkorderLabel_summe=Summe:
+ViewWorkorderTitle_summe=Summe
+ViewWorkorderLabel_kuerzel=Kuerzel:
+ViewWorkorderTitle_kuerzel=Kuerzel
+ViewWorkorderLabel_firmierung1=Firmierung1:
+ViewWorkorderTitle_firmierung1=Firmierung1
+ListWorkorderTitle=List
+ListWorkorderEmpty=(No Workorder Items Found)
+ListWorkorderDestroyLink=Destroy
+ListWorkorderEditLink=Edit
+ListWorkorderViewLink=View
+ListWorkorderCreateLink=Create New Workorder
+ListWorkorderIndexLink=Index
+ListWorkorderTitle_id=Id
+ListWorkorderTitle_dat=Dat
+ListWorkorderTitle_uhr=Uhr
+ListWorkorderTitle_von=Von
+ListWorkorderTitle_ueber=Ueber
+ListWorkorderTitle_nach=Nach
+ListWorkorderTitle_job=Job
+ListWorkorderTitle_fahrschecknr=Fahrschecknr
+ListWorkorderTitle_preis=Preis
+ListWorkorderTitle_fahrernr=Fahrernr
+ListWorkorderTitle_typ=Typ
+ListWorkorderTitle_preischeck=Preischeck
+ListWorkorderTitle_fahrscheckcheck=Fahrscheckcheck
+ListWorkorderTitle_sonderkonditionen=Sonderkonditionen
+ListWorkorderTitle_summe=Summe
+ListWorkorderTitle_kuerzel=Kuerzel
+ListWorkorderTitle_firmierung1=Firmierung1
