Add login and logout form pages.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -109,3 +109,7 @@ ListWorkorderTitle_sonderkonditionen=Sonderkonditionen
 ListWorkorderTitle_summe=Summe
 ListWorkorderTitle_kuerzel=Kuerzel
 ListWorkorderTitle_firmierung1=Firmierung1
+
+login.username=Username
+login.password=Password
+login.submit=log in
