Clean up version display, label it.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -113,3 +113,4 @@ ListWorkorderTitle_firmierung1=Firmierung1
 login.username=Username
 login.password=Password
 login.submit=log in
+VersionLabel=Version
