Try to overwrite page sizes from properties.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -110,6 +110,9 @@ ListWorkorderTitle_summe=Summe
 ListWorkorderTitle_kuerzel=Kuerzel
 ListWorkorderTitle_firmierung1=Firmierung1
 
+Workorder_Pagesize=10
+Customer_Pagesize=10
+
 login.username=Username
 login.password=Password
 login.submit=log in
