--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>org.ifbma.legacy</groupId>
     <artifactId>LegacyDespot</artifactId>
-    <version>1.0.5-PRIMEFACES-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <organization>
