Add captions for rider CRUD.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -105,6 +105,81 @@ ListWorkorderTitle_sonderkonditionen=Sonderkonditionen
 ListWorkorderTitle_summe=Summe
 ListWorkorderTitle_kuerzel=Kuerzel
 ListWorkorderTitle_firmierung1=Firmierung1
+RiderCreated=Rider was successfully created.
+RiderUpdated=Rider was successfully updated.
+RiderDeleted=Rider was successfully deleted.
+CreateRiderTitle=Create New Rider
+CreateRiderSaveLink=Save
+CreateRiderShowAllLink=Show All Rider Items
+CreateRiderIndexLink=Index
+CreateRiderLabel_id=Id:
+CreateRiderRequiredMessage_id=The Id field is required.
+CreateRiderTitle_id=Id
+CreateRiderLabel_riderNumber=RiderNumber:
+CreateRiderRequiredMessage_riderNumber=The RiderNumber field is required.
+CreateRiderTitle_riderNumber=RiderNumber
+CreateRiderLabel_anzahltouren=Anzahltouren:
+CreateRiderRequiredMessage_anzahltouren=The Anzahltouren field is required.
+CreateRiderTitle_anzahltouren=Anzahltouren
+CreateRiderLabel_letztetour=Letztetour:
+CreateRiderTitle_letztetour=Letztetour
+CreateRiderLabel_fullName=FullName:
+CreateRiderRequiredMessage_fullName=The FullName field is required.
+CreateRiderTitle_fullName=FullName
+CreateRiderLabel_status=Status:
+CreateRiderRequiredMessage_status=The Status field is required.
+CreateRiderTitle_status=Status
+EditRiderTitle=Edit Rider
+EditRiderSaveLink=Save
+EditRiderViewLink=View
+EditRiderShowAllLink=Show All Rider Items
+EditRiderIndexLink=Index
+EditRiderLabel_id=Id:
+EditRiderRequiredMessage_id=The Id field is required.
+EditRiderTitle_id=Id
+EditRiderLabel_riderNumber=RiderNumber:
+EditRiderRequiredMessage_riderNumber=The RiderNumber field is required.
+EditRiderTitle_riderNumber=RiderNumber
+EditRiderLabel_anzahltouren=Anzahltouren:
+EditRiderRequiredMessage_anzahltouren=The Anzahltouren field is required.
+EditRiderTitle_anzahltouren=Anzahltouren
+EditRiderLabel_letztetour=Letztetour:
+EditRiderTitle_letztetour=Letztetour
+EditRiderLabel_fullName=FullName:
+EditRiderRequiredMessage_fullName=The FullName field is required.
+EditRiderTitle_fullName=FullName
+EditRiderLabel_status=Status:
+EditRiderRequiredMessage_status=The Status field is required.
+EditRiderTitle_status=Status
+ViewRiderTitle=View
+ViewRiderEditLink=Edit
+ViewRiderCreateLink=Create New Rider
+ViewRiderShowAllLink=Show All Rider Items
+ViewRiderIndexLink=Index
+ViewRiderLabel_id=Id:
+ViewRiderTitle_id=Id
+ViewRiderLabel_riderNumber=RiderNumber:
+ViewRiderTitle_riderNumber=RiderNumber
+ViewRiderLabel_anzahltouren=Anzahltouren:
+ViewRiderTitle_anzahltouren=Anzahltouren
+ViewRiderLabel_letztetour=Letztetour:
+ViewRiderTitle_letztetour=Letztetour
+ViewRiderLabel_fullName=FullName:
+ViewRiderTitle_fullName=FullName
+ViewRiderLabel_status=Status:
+ViewRiderTitle_status=Status
+ListRiderTitle=List
+ListRiderEmpty=(No Rider Items Found)
+ListRiderEditLink=Edit
+ListRiderViewLink=View
+ListRiderCreateLink=Create New Rider
+ListRiderIndexLink=Index
+ListRiderTitle_id=Id
+ListRiderTitle_riderNumber=RiderNumber
+ListRiderTitle_anzahltouren=Anzahltouren
+ListRiderTitle_letztetour=Letztetour
+ListRiderTitle_fullName=FullName
+ListRiderTitle_status=Status
 
 Workorder_Pagesize=10
 Customer_Pagesize=10
