--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>org.ifbma.legacy</groupId>
     <artifactId>LegacyDespot</artifactId>
-    <version>1.2.0-RIDERINPUT-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <organization>
@@ -23,7 +23,7 @@
     <name>LegacyDespot</name>
     <ciManagement>
         <system>hudson</system>
-        <url>https://dev.ifbma.org:8181/jenkins/job/Branch-LegacyDespot/</url>
+        <url>https://dev.ifbma.org:8181/jenkins/job/LegacyDespot/</url>
     </ciManagement>
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
