--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>primefaces-mobile</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
