--- a/LegacyDespot/pom.xml
+++ b/LegacyDespot/pom.xml
@@ -4,35 +4,15 @@
 
     <parent>
         <groupId>org.ifbma</groupId>
-        <artifactId>ee6-parent-pom</artifactId>
-        <version>1.0.3</version>
+        <artifactId>DespotEnvelope</artifactId>
+        <version>1.3.3-SNAPSHOT</version>
     </parent>
 
     <groupId>org.ifbma.legacy</groupId>
     <artifactId>LegacyDespot</artifactId>
-    <version>1.3.3-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <organization>
-        <name>IFMBA</name>
-        <url>http://ifbma.org/</url>
-    </organization>
-
     <name>LegacyDespot</name>
-    <ciManagement>
-        <system>hudson</system>
-        <url>https://dev.ifbma.org:8181/jenkins/job/LegacyDespot/</url>
-    </ciManagement>
-    <properties>
-        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
-    <scm>
-        <connection>scm:git:ssh://gitrepos@ifbma.org/~/LegacyDespot</connection>
-        <developerConnection>scm:git:ssh://gitrepos@ifbma.org/~/LegacyDespot</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
 
     <dependencies>
         <dependency>
