--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,32 @@
 
     <groupId>org.ifbma</groupId>
     <artifactId>DespotEnvelope</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.3.3-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <name>DespotEnvelope</name>
+
+    <organization>
+        <name>IFMBA</name>
+        <url>http://ifbma.org/</url>
+    </organization>
+
     <modules>
         <module>LegacyDespot</module>
     </modules>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
     </properties>
+
+    <ciManagement>
+        <system>hudson</system>
+        <url>https://dev.ifbma.org:8181/jenkins/job/LegacyDespot/</url>
+    </ciManagement>
+    <scm>
+        <connection>scm:git:ssh://gitrepos@ifbma.org/~/LegacyDespot</connection>
+        <developerConnection>scm:git:ssh://gitrepos@ifbma.org/~/LegacyDespot</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
 </project>
