--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
     <parent>
         <groupId>org.ifbma</groupId>
-        <artifactId>ee7-parent-pom</artifactId>
-        <version>1.0.5</version>
+        <artifactId>ifbma-parent-pom</artifactId>
+        <version>1.0.12-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -30,6 +30,7 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
+        <site.url>file:///{$basedir}/target/sitedeployment</site.url>
     </properties>
 
     <scm>
