--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
         <url>http://ifbma.org/</url>
     </organization>
 
-    <name>LegacyDespot</name>
+    <name>Despot</name>
     <ciManagement>
         <system>hudson</system>
-        <url>https://dev.ifbma.org:8443/jenkins/job/LegacyDespot/</url>
+        <url>https://dev.ifbma.org:8443/jenkins/job/Despot/</url>
     </ciManagement>
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -43,6 +43,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
         </dependency>
         <dependency>
             <groupId>org.primefaces</groupId>
